--- a/index.html
+++ b/index.html
@@ -42,12 +42,54 @@
               </div>
             </div>
           </form>
-          <div class="list-group" id="history"></div>
+          <div class="list-group" id="history">
+            <button class="history-btn">hist1</button>
+            <button class="history-btn">hist1</button>
+            <button class="history-btn">hist1</button>
+            <button class="history-btn">hist1</button>
+            <button class="history-btn">hist1</button>
+          </div>
         </aside>
 
         <div class="col-lg-9 pb-3">
-          <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-          <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+          <section id="today" class="mt-3" role="region" aria-live="polite">
+            <h2>current</h2>
+            <p>Temp: 10</p>
+            <p>Wind: 12 KPH</p>
+            <p>humidity: 20</p>
+          </section>
+          <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+            <h4>5-Day Forecast</h4>
+            <div class="forecast-container">
+              <div class="future-day">
+                <p>date</p>
+                <div>icon</div>
+                <p>temp</p>
+                <p>wind</p>
+                <p>humidity</p>
+              </div>
+              <div class="future-day">
+                <p>temp</p>
+                <p>wind</p>
+                <p>humidity</p>
+              </div>
+              <div class="future-day">
+                <p>temp</p>
+                <p>wind</p>
+                <p>humidity</p>
+              </div>
+              <div class="future-day">
+                <p>temp</p>
+                <p>wind</p>
+                <p>humidity</p>
+              </div>
+              <div class="future-day">
+                <p>temp</p>
+                <p>wind</p>
+                <p>humidity</p>
+              </div>
+            </div>
+          </section>
         </div>
       </div>
     </div>
